@@ -1,3 +1,7 @@
+2005-08-18  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
+	* src/devdescr.cc: set ucPCMaskHigh to 0 for ATmega329x/649x.
+
 2005-08-17  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	* src/devdescr.cc: add the ATmega329x/649x family.
